testsuite/tests/semantic_errors/constraining_field_reference/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["V"] test.adb:12:4-12:29>
***************************************************************

Name resolution failed as expected with:

test.adb:12:24: error: expected Boolean, got universal integer
12 |    V : Integer := Foo (3).Y;
   |                        ^



Done.
